fix: stretch contact page to fill entire viewport, prevents big whitespace below

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -46,6 +46,7 @@ h1 {
 
 body {
     background: #494c5c;
+    min-height: 100vh;
 }
 
 .navbar {
